data/derived/sp14/progs/unify/prog0098.ml.out
Characters 22-23:
  exprToString (Sin_Avg(1,2,3));;
                        ^
Error: This expression has type int but an expression was expected of type
         expr
